tools/gen/22.3/rpk-cloud-login.adoc
= rpk cloud login
:description: rpk cloud login

Log in to the Redpanda cloud

This command checks for an existing token and, if present, ensures it is still
valid. If no token is found or the token is no longer valid, this command will
login and save your token.

You may use any of the following methods to pass the cloud credentials to rpk:

Logging in requires cloud credentials, which can be created in the Clients
tab of the Users section in the Redpanda Cloud online interface. Client
credentials can be provided in three ways, in order of preference:

* In $HOME/.config/rpk/__cloud.yaml, in 'client_id' and 'client_secret' fields
* Through RPK_CLOUD_CLIENT_ID and RPK_CLOUD_CLIENT_SECRET environment variables
* Through the --client-id and --client-secret flags

If none of these are provided, login will prompt you for the client ID and
client secret and will save them to the __cloud.yaml file. If you specify
environment variables or flags, they will not be synced to the __cloud.yaml
file unless the --save flag is passed. The cloud authorization token is always 
synced.

== Usage

[,bash]
----
rpk cloud login [flags]
----

== Flags

[cols="1m,1a,2a]
|===
|*Value* |*Type* |*Description*

|`--client-id` |string |The client ID of the organization in Redpanda Cloud.

|`--client-secret` |string |The client secret of the organization in Redpanda Cloud.

|`-h, --help` |- |Help for login.

|`--save` |- |Save environment or flag specified client ID and client secret to the configuration file.

|`-v, --verbose` |- |Enable verbose logging (default: false).
|===